[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/life_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/life_bar.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/life_fill.png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/energy_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/energy_bar.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/energy_fill.png" type="Texture" id=7]
[ext_resource path="res://assets/MainMenu/fonts/power_pixel-7.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 8 )

[node name="GUI" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 640.222, 669.688, 609.528 ]
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 2.0
margin_right = 1280.0
margin_bottom = 99.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Bars" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 97.0
size_flags_horizontal = 3

[node name="LifeBar" type="HBoxContainer" parent="HBoxContainer/P1Bars"]
margin_right = 1280.0
margin_bottom = 37.0

[node name="Count" type="HBoxContainer" parent="HBoxContainer/P1Bars/LifeBar"]
margin_right = 43.0
margin_bottom = 37.0

[node name="Title" type="TextureRect" parent="HBoxContainer/P1Bars/LifeBar/Count"]
margin_right = 43.0
margin_bottom = 37.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gauge" type="TextureProgress" parent="HBoxContainer/P1Bars/LifeBar"]
margin_left = 47.0
margin_right = 256.0
margin_bottom = 37.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="EnergyBar" type="HBoxContainer" parent="HBoxContainer/P1Bars"]
margin_top = 41.0
margin_right = 1280.0
margin_bottom = 78.0

[node name="Count" type="HBoxContainer" parent="HBoxContainer/P1Bars/EnergyBar"]
margin_right = 43.0
margin_bottom = 37.0

[node name="Title" type="TextureRect" parent="HBoxContainer/P1Bars/EnergyBar/Count"]
margin_right = 43.0
margin_bottom = 37.0
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gauge" type="TextureProgress" parent="HBoxContainer/P1Bars/EnergyBar"]
margin_left = 47.0
margin_right = 256.0
margin_bottom = 37.0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = 266.799
margin_top = 3.95087
margin_right = 396.799
margin_bottom = 35.9509
custom_fonts/font = SubResource( 1 )
text = "$400 "

